<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"

    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.estg.recursoteste.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_trackers"
        android:name="com.estg.recursoteste.ui.dashboard.DashboardFragment"
        android:label="@string/title_trackers"
        tools:layout="@layout/activity_show_trackers" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.estg.recursoteste.ui.notifications.NotificationsFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_mapa"
        android:name="com.estg.recursoteste.ui.mapa.MapaFragment"
        android:label="@string/title_mapa"
        tools:layout="@layout/fragment_map" />
</navigation>